# ai-docs-vector-db-hybrid-scraper

./: .coveragerc  .crawl4ai_state.json  .dockerignore  .editorconfig  .env.enterprise  .env.example  .env.modern.example  .env.simple  .env.simplified  .env.test  .gitignore  .gitleaks.toml  .markdownlint-cli2.json  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  ADVANCED_FEATURES.md  ADVANCED_ORCHESTRATOR_TESTS_SUMMARY.md  AGENTS.md  AI_DOCS_2025_MODERNIZATION_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_SECURITY_CLEANUP_REPORT.md  ASYNC_TEST_MODERNIZATION_COMPLETE.md  CHANGELOG.md  CHANGELOG_SPRINT.md  CI-OPTIMIZATION-REPORT.md  CLAUDE.md  CODEBASE_CLEANUP_SUMMARY.md  COMMUNITY-GUIDELINES.md  COMPREHENSIVE_AUDIT_REPORT.md  CONFIGURATION_TESTING_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCKER_BUILD_SOLUTION.md  Dockerfile  Dockerfile.fixed  Dockerfile.simple  Dockerfile.worker  Dockerfile.worker.minimal  (+141 more)
.github/: CI-README.md  STATUS.md  WORKFLOWS_SIMPLIFIED.md  dependabot.yml  labeler.yml  markdown-link-check-config.json  renovate.json
.serena/: project.yml
.subagents/: master_report.md  status.json
.taskmaster/: config.json  state.json
benchmark_results/: database_performance.json
config/: browser-routing-rules.json  claude-desktop-config.json  claude-mcp-config.example.json  claude-mcp-config.json  crawl4ai-site-templates.json  documentation-sites.json  eval_budgets.yml  eval_costs.yml  mcp-server-config.json  metrics_allowlist.json  prometheus.yml
docker/: Dockerfile.worker
docs/: ADVANCED_SEARCH_IMPLEMENTATION.md  API_SDK_INTEGRATION_REFACTOR.md  ARCHITECTURE_5_TIER.md  BROWSER_AUTOMATION_INTEGRATION_ROADMAP.md  CENTRALIZED_CLIENT_MANAGEMENT.md  CODE_ARCHITECTURE_IMPROVEMENTS.md  COLLECTION_ALIASES.md  CONFIGURATION_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  DUAL_MODE_ARCHITECTURE.md  EMBEDDING_MODEL_INTEGRATION.md  ENHANCED_CHUNKING_GUIDE.md  ISSUE_96_COMPLETION_SUMMARY.md  MCP_SERVER_ENHANCEMENT_PLAN.md  MCP_SERVER_GUIDE.md  MCP_SERVER_SETUP.md  MODERNIZATION_SUMMARY.md  NEW_FEATURES_AND_PATTERNS.md  PAYLOAD_INDEXING_PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_TUNING.md  PR11_COMPLETION_CHECKLIST.md  PR11_COMPLETION_SUMMARY.md  PR11_FINAL_STATUS.md  QUICK_START.md  README.md  RERANKING_GUIDE.md  SOTA_2025_CHUNKING.md  SOTA_2025_IMPLEMENTATION.md  SOTA_2025_RERANKING.md  SPRINT_ARCHITECTURE_SUMMARY.md  TECHNICAL_IMPLEMENTATION.md  TECH_DEBT.md  TESTING_QUALITY_ENHANCEMENTS.md  TROUBLESHOOTING.md  UNIFIED_CONFIGURATION.md  V1_DOCUMENTATION_SUMMARY.md  V1_IMPLEMENTATION_PLAN.md  VECTOR_DB_BEST_PRACTICES.md  asyncio_taskgroup_migration.md  (+31 more)
docs-backup-20250609-115943/: README.md  browser-automation-roadmap.md  collection-aliases.md  document-template.md  documentation-restructure-plan.md  file-naming-guidelines.md  link_updates.json  payload-indexing-performance.md
examples/: agentic_rag_demo.py  basic-search.py  config_drift_demo.py  config_error_handling_demo.py  config_reload_example.py  enhanced_security_config_demo.py  integration_success_demo.py  observability_demo.py  parallel_processing_demo.py  parallel_processing_di_demo.py  parallel_processing_usage.py  performance_optimization_demo.py  portfolio_observability_showcase.py  progressive_sophistication_demo.py  rag_integration_demo.py  security_config_demo.py  security_production_config.py  simple_parallel_processing_demo.py
k8s/: README.md  app-deployment.yaml  configmap.yaml  dragonfly-deployment.yaml  kustomization.yaml  namespace.yaml  qdrant-statefulset.yaml  worker-deployment.yaml
planning/: COMPREHENSIVE_SYNTHESIS_REPORT.md  MAIN_TRACKING_RESEARCH_REPORT.md  README.md  master_report.md  status.json  unit_test_refactor_plan.md
scripts/: README.md  __init__.py  add_noqa_b008.py  add_respx_mocking.py  add_respx_to_async_tests.py  add_status_indicators.py  add_test_markers.py  advanced_quality_fixes.py  apply_f821_fixes.py  batch_fix_try_violations.py  benchmark_anti_detection_performance.py  benchmark_crawl4ai_performance.py  benchmark_enhanced_db_pool.py  benchmark_hnsw_optimization.py  benchmark_lightweight_tier.py  benchmark_payload_indexing.py  benchmark_query_api.py  benchmark_visualizer.py  check_circular_deps.py  config_rollback.py  convert_remaining_to_respx.py  convert_to_respx.py  dev.py  docs_automation.py  fix_async_context_managers.py  fix_async_test_patterns.py  fix_event_loop_issues.py  fix_final_12_poa_errors.py  fix_final_30_poa_errors.py  fix_final_async_issues.py  fix_final_async_patterns.py  fix_final_poa_errors.py  fix_observability_globals.py  fix_observability_test_flow.py  fix_opentelemetry_mocking.py  fix_poa_linting_errors.py  fix_poa_specific_errors.py  fix_remaining_async_issues.py  fix_remaining_async_tests.py  fix_remaining_poa_errors.py  (+52 more)
src/: __init__.py  chunking.py  cli_worker.py  crawl4ai_bulk_embedder.py  enhanced_mcp_server.py  enhanced_mcp_server_refactored.py  error_handling.py  manage_vector_db.py  mcp_server.py  mcp_server_refactored.py  modular_mcp_server.py  security.py  unified_mcp_server.py  utils.py
subagents/: COMPREHENSIVE_SYNTHESIS_REPORT.md  FASTMCP_MODERNIZATION_SYNTHESIS_REPORT.md  H4_integration_patterns_optimization.md  H5_code_modernization_opportunities.md  J1_ENTERPRISE_AGENTIC_OBSERVABILITY_REPORT.md  J2_AGENTIC_SECURITY_PERFORMANCE_OPTIMIZATION_REPORT.md  J3_DYNAMIC_TOOL_COMPOSITION_ENGINE_REPORT.md  MAIN_TRACKING_RESEARCH_REPORT.md  README.md
test_results/: comprehensive_test_report.json
tests/: MODERNIZATION_SUMMARY.md  PARALLEL_EXECUTION_PLAN.md  PATTERN_MODERNIZATION_REPORT.md  QUALITY_ENGINEERING_EXCELLENCE.md  SUBAGENT_TASKS.md  TESTING_INFRASTRUCTURE_SUMMARY.md  TESTING_INNOVATION_SHOWCASE.md  TEST_CLEANUP_ACTION_PLAN.md  TEST_INFRASTRUCTURE_REPORT.md  TEST_ISSUES_REPORT.md  TEST_PATTERNS_STYLE_GUIDE.md  __init__.py  conftest.py  conftest_cli.py  conftest_enhanced.py  conftest_infrastructure.py  conftest_service_testing.py  quality_dashboard.py  quality_engineering_runner.py  test_cache.py  test_cache_performance.py  test_chunking.py  test_mcp_server.py  (+24 more)
(+2292 files in other folders)
